@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------#
-# Copyright (C) 2002-2003 University of Melbourne.
+# Copyright (C) 2002-2004 University of Melbourne.
 # This file may only be copied under the terms of the GNU General
 # Public License - see the file COPYING in the Mercury distribution.
 #-----------------------------------------------------------------------------#
@@ -10,3 +10,4 @@ MCFLAGS-mer_browser = --no-warn-nothing-exported
 MCFLAGS-mer_mdbcomp = --no-warn-nothing-exported
 
 EXTRA_LIBRARIES-libmer_browser.so = mer_mdbcomp
+EXTRA_LIBRARIES-libmer_browser.dylib = mer_mdbcomp
